fixed the colors of the pokemon card so it reflects the type, fetched pokemon from the pokeapi, styled a bit in js, unexpected bugs with some filter buttons, not getting all the types I want from the api

--- a/index.html
+++ b/index.html
@@ -7,6 +7,38 @@
     <title>oppgave_1_pokemon</title>
   </head>
   <body>
+    <h1>Pokemon Index:</h1>
+
+    <div class="main-container">
+    <div class="card-container"><div class="card">
+    </div></div>
+    <div class="favourite-list">
+      <h3>My Favorite Pokemon</h3>
+      <ul id="favourite-pokemon-list"></ul>
+    </div>
+
+    <div class="grid-container">
+      <!--Filter-buttons-->
+      <button class="type-btn" data-type="bug">Bug</button>
+      <button class="type-btn" data-type="dark">Dark</button>
+      <button class="type-btn" data-type="dragon">Dragon</button>
+      <button class="type-btn" data-type="electric">Electric</button>
+      <button class="type-btn" data-type="fairy">Fairy</button>
+      <button class="type-btn" data-type="fighting">Fighting</button>
+      <button class="type-btn" data-type="fire">Fire</button>
+      <button class="type-btn" data-type="flying">Flying</button>
+      <button class="type-btn" data-type="ghost">Ghost</button>
+      <button class="type-btn" data-type="grass">Grass</button>
+      <button class="type-btn" data-type="ground">Ground</button>
+      <button class="type-btn" data-type="ice">Ice</button>
+      <button class="type-btn" data-type="normal">Normal</button>
+      <button class="type-btn" data-type="poison">Poison</button>
+      <button class="type-btn" data-type="psychic">Psychic</button>
+      <button class="type-btn" data-type="rock">Rock</button>
+      <button class="type-btn" data-type="steel">Steel</button>
+      <button class="type-btn" data-type="water">Water</button>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
