--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <button class="type-btn" data-type="rock">Rock</button>
       <button class="type-btn" data-type="steel">Steel</button>
       <button class="type-btn" data-type="water">Water</button>
+      <button class ="type-btn" id="all-types-btn">All types</button>
     </div>
 
     <script src="index.js"></script>
