--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <button class="type-btn" data-type="steel">Steel</button>
       <button class="type-btn" data-type="water">Water</button>
       <button class ="type-btn" id="all-types-btn">All types</button>
+      <button class ="type-btn" id="make-your-own-btn">Lag en pokemon</button>
     </div>
 
     <script src="index.js"></script>
