added a type none to the buttons, I have also worked on the delete function all day, but had to delete it all because it either just targeted the card or the list/localStorage

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <button class="type-btn" data-type="rock">Rock</button>
       <button class="type-btn" data-type="steel">Steel</button>
       <button class="type-btn" data-type="water">Water</button>
-      <button class ="type-btn" id="all-types-btn">All types</button>
-      <button class ="type-btn" id="make-your-own-btn">Lag en pokemon</button>
+      <button class ="type-btn" data-type="none" id="all-types-btn">All types</button>
+      <button class ="type-btn" data-type="none" id="make-your-own-btn">Lag en pokemon</button>
     </div>
 
     <script src="index.js"></script>
