finished the html and css

--- a/battle.html
+++ b/battle.html
@@ -7,6 +7,7 @@
     <title>oppgave_2_battle</title>
   </head>
   <body>
+    <div class="overlay"></div>
     <!--brukers pokemon-->
     <div class="main-container">
       <div class="pokemon-healthbar-containers">
