worked on savedPokemonData, makeYourOwn(using the old edit for now) and showSavedPokemonList. Still buggs with the makeYourOwn

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <button class="type-btn" data-type="steel">Steel</button>
       <button class="type-btn" data-type="water">Water</button>
       <button class ="type-btn" data-type="none" id="all-types-btn">All types</button>
-      <button class ="type-btn" data-type="none" id="make-your-own-btn">Lag en pokemon</button>
     </div>
-
+    <!--default image for customized pokemon-->
+    <img class="default-img" src="/assets/ludicolo.png" alt="ludicolo">
     <script src="index.js"></script>
   </body>
 </html>
